src/test/deca/context/valid/created/methode_surchage_no_pb.deca
//Description :
// Redef de methode
//
// Resultats :
//


class Premiere {
    int x = 2;
    protected float y = 3;

    Premiere getObject(){
    return this;
    }

}

class Second extends Premiere {

  void blabla(int a){
  print(a);
  }

  Premiere getObject(){
  return this;
  }

}
