src/test/deca/context/invalid/created/methode_surchage_pb1.deca
//Description :
// Redef de methode
//
// Resultats :
// Erreur


class Premiere {
    int x = 2;
    protected float y = 3;

    void blabla(int b){
    print(b);
    }

}

class Second extends Premiere {

  void blabla(float a){
  print(a);
  }

}
